syntax = "proto3";
import "CharacterMessage.proto";
import "OptionMessage.proto";

message C_LOGIN {
    string login_id = 1;
    string login_pw = 2;
}

message S_LOGIN {
    bool login_success = 1;
    string ip = 2;
    int32 port = 3;
}

message C_OPTION {
    bool get_options = 1;
}

message S_OPTION {
    SETTING_OPTIONS setting_options = 1;
}

message C_NICKNAME {
    string nickname = 1;
}

message S_NICKNAME {
    bool nickname_success = 1;
}

message C_CHARACTER {
    CHARACTER_INFO character = 1;
}

message S_CHARACTER {
    bool create_success = 1;
}
